2018.8/_sources/plugins/available/deblur/denoise-other.txt
denoise-other: Deblur sequences using a user-specified positive filter.
=======================================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime deblur denoise-other [OPTIONS]

     Perform sequence quality control for Illumina data using the Deblur
     workflow, including positive alignment-based filtering. Only forward reads
     are supported at this time. This mode of execution is particularly useful
     when operating on non-16S data. For example, to apply Deblur to 18S data,
     you would want to specify a reference composed of 18S sequences in order
     to filter out sequences which do not appear to be 18S. The assessment is
     performed by local alignment using SortMeRNA with a permissive e-value
     threshold.

   Options:
     --i-demultiplexed-seqs ARTIFACT PATH SampleData[JoinedSequencesWithQuality | PairedEndSequencesWithQuality | SequencesWithQuality]
                                     The demultiplexed sequences to be denoised.
                                     [required]
     --i-reference-seqs ARTIFACT PATH FeatureData[Sequence]
                                     Positive filtering database. Keep all
                                     sequences aligning to these sequences.
                                     [required]
     --p-trim-length INTEGER         Sequence trim length, specify -1 to disable
                                     trimming.  [required]
     --p-sample-stats / --p-no-sample-stats
                                     If true, gather stats per sample.  [default:
                                     False]
     --p-mean-error FLOAT            The mean per nucleotide error, used for
                                     original sequence estimate.  [default:
                                     0.005]
     --p-indel-prob FLOAT            Insertion/deletion (indel) probability (same
                                     for N indels).  [default: 0.01]
     --p-indel-max INTEGER           Maximum number of insertion/deletions.
                                     [default: 3]
     --p-min-reads INTEGER           Retain only features appearing at least
                                     min_reads times across all samples in the
                                     resulting feature table.  [default: 10]
     --p-min-size INTEGER            In each sample, discard all features with an
                                     abundance less than min_size.  [default: 2]
     --p-jobs-to-start INTEGER       Number of jobs to start (if to run in
                                     parallel).  [default: 1]
     --p-hashed-feature-ids / --p-no-hashed-feature-ids
                                     If true, hash the feature IDs.  [default:
                                     True]
     --o-table ARTIFACT PATH FeatureTable[Frequency]
                                     The resulting denoised feature table.
                                     [required if not passing --output-dir]
     --o-representative-sequences ARTIFACT PATH FeatureData[Sequence]
                                     The resulting feature sequences.  [required
                                     if not passing --output-dir]
     --o-stats ARTIFACT PATH DeblurStats
                                     Per-sample stats if requested.  [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.deblur.methods import denoise_other

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Deblur sequences using a user-specified positive filter.

   Perform sequence quality control for Illumina data using the Deblur
   workflow, including positive alignment-based filtering. Only forward reads
   are supported at this time. This mode of execution is particularly useful
   when operating on non-16S data. For example, to apply Deblur to 18S data,
   you would want to specify a reference composed of 18S sequences in order to
   filter out sequences which do not appear to be 18S. The assessment is
   performed by local alignment using SortMeRNA with a permissive e-value
   threshold.

   Parameters
   ----------
   demultiplexed_seqs : SampleData[JoinedSequencesWithQuality | PairedEndSequencesWithQuality | SequencesWithQuality]
       The demultiplexed sequences to be denoised.
   reference_seqs : FeatureData[Sequence]
       Positive filtering database. Keep all sequences aligning to these
       sequences.
   trim_length : Int
       Sequence trim length, specify -1 to disable trimming.
   sample_stats : Bool, optional
       If true, gather stats per sample.
   mean_error : Float, optional
       The mean per nucleotide error, used for original sequence estimate.
   indel_prob : Float, optional
       Insertion/deletion (indel) probability (same for N indels).
   indel_max : Int, optional
       Maximum number of insertion/deletions.
   min_reads : Int, optional
       Retain only features appearing at least min_reads times across all
       samples in the resulting feature table.
   min_size : Int, optional
       In each sample, discard all features with an abundance less than
       min_size.
   jobs_to_start : Int, optional
       Number of jobs to start (if to run in parallel).
   hashed_feature_ids : Bool, optional
       If true, hash the feature IDs.

   Returns
   -------
   table : FeatureTable[Frequency]
       The resulting denoised feature table.
   representative_sequences : FeatureData[Sequence]
       The resulting feature sequences.
   stats : DeblurStats
       Per-sample stats if requested.</pre>
       </div>
     </div>
   </div>